[project]
name = "endless-buttons"
description = "A small set of JavaScript files I created for myself. The scripts provide Quality of Life enhancements to the ComfyUI interface, such as changing fonts and font sizes."
version = "1.2.0"
license = { file = "LICENSE" }
dependencies = ""

[project.urls]
Repository = "https://github.com/tusharbhutt/Endless-Buttons"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tusharbhutt"
DisplayName = "Endless 🌊✨ Buttons"
Icon = "https://raw.githubusercontent.com/tusharbhutt/Endless-Buttons/main/img/icon.png"
